# arm-robot-dynamic-surface-tracking

./: README.md  dependencies.repos
surface_tracking_aligner/: CMakeLists.txt  package.xml
surface_tracking_aligner/config/: marker_config.yaml
surface_tracking_aligner/launch/: aligner.launch.py  calibration.launch.py
surface_tracking_aligner/scripts/: calibration.py
surface_tracking_aligner/src/: rigid_body_aligner.cpp
surface_tracking_bringup/: CMakeLists.txt  package.xml
surface_tracking_bringup/config/: experiment_config.yaml
surface_tracking_bringup/launch/: surface_tracking.launch.py
surface_tracking_calibration/: CMakeLists.txt  package.xml
surface_tracking_calibration/config/: marker_config.yaml
surface_tracking_calibration/launch/: aligner.launch.py  camera_aligner.launch.py
surface_tracking_calibration/meshes/: target_platform_frame.stl
surface_tracking_calibration/scripts/: camera_aligner.py  camera_visualizer.py  target_aligner.py  target_visualizer.py
surface_tracking_controller/: CMakeLists.txt  package.xml
surface_tracking_gui/: package.xml  setup.cfg  setup.py
surface_tracking_gui/launch/: master_dashboard.launch.py
surface_tracking_gui/surface_tracking_gui/: master_dashboard.py
surface_tracking_interfaces/: CMakeLists.txt  package.xml
surface_tracking_interfaces/action/: DrawTrajectory.action
surface_tracking_msgs/: CMakeLists.txt  package.xml
surface_tracking_msgs/msg/: AlignmentTelemetry.msg
surface_tracking_planner/: package.xml  setup.cfg  setup.py
surface_tracking_visualization/: CMakeLists.txt  package.xml
(+9 files in other folders)
